6523
Sorry, this one is as specified.  You are trying to call map on a collection with an undefined type.  See SLS 6.23: "If the expected type of the anonymous function is some other type, all formal parameter types must be explicitly given, and the expected type of e is undefined."
```scala
scala> (1 to 3 toSet) map (_ + 1)
<console>:8: error: missing parameter type for expanded function ((x$1) => x$1.$plus(1))
              (1 to 3 toSet) map (_ + 1)
                                  ^

// Two alternatives which work
scala> (1 to 3).toSet[Int] map (_ + 1)
res3: scala.collection.immutable.Set[Int] = Set(2, 3, 4)

scala> (1 to 3 toSet) map ((x: Int) => x + 1)
res4: scala.collection.immutable.Set[Int] = Set(2, 3, 4)

// And even this works.
scala> for ((n: Int) <- 1 to 3 toSet) yield n + 1
res5: scala.collection.immutable.Set[Int] = Set(2, 3, 4)
```
